# igpay-atinlay

./: Cargo.toml  README.md  README.tpl
examples/: pig-latin.rs
src/: lib.rs
