[package]
name = "igpay-atinlay"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"
description = "Translate text to Pig Latin"
license = "MIT"
repository = "https://github.com/BartMassey/igpay-atinlay"
readme = "README.md"
categories = ["text-processing"]

[dependencies]
regex = "1.4.5"
is-vowel = "0.1.0"

[dev-dependencies]
version-sync = "0.9"

[badges.maintenance]
status = "actively-developed"
